tests/e2e/semantics/obj_key_any_invalid2.error
Error: syntax error in story at line 4, column 5

4|    b = ANY[t]
          ^^^^^

E0104: `any` can't be indexed with `t` of type `Map[any,any]`
