tests/e2e/semantics/obj_key_any_invalid2.story
a = {} to Map[any,any]
ANY = a[0]
t = {} to Map[any,any]
b = ANY[t]
